fix style body overflow-x

--- a/public/styles/call.css
+++ b/public/styles/call.css
@@ -171,6 +171,9 @@ video {
     object-fit: cover;
     box-shadow: 0 5px 15px rgba(0,0,0,0.3);
 }
+video::-webkit-media-controls {
+    display:none !important;
+}
 
 @media (max-width: 1200px) {
   #photos {
